--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sentry/react": "^8.0.0",
+    "date-fns": "^3.6.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -31,6 +32,8 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
+    "@tanstack/react-query": "^5.59.0",
+    "@monaco-editor/react": "^4.6.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
