--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ gunicorn==21.2.*
 django-cors-headers>=4.0.0
 openai==1.12.*
 Pillow==10.2.*
-httpx==0.27.*  # Pin to proxy-compatible version for OpenAI client
+httpx>=0.27.0  # HTTP client for OpenRouter streaming
 whitenoise==6.6.0
 fal-client>=0.10.0
 mixpanel==5.0.0
@@ -22,4 +22,13 @@ redis>=5.0.0  # Redis client for Celery broker
 reportlab>=4.0.0  # PDF generation
 python-pptx>=0.6.21  # PPTX generation
 requests>=2.32.*  # Already present, used for image downloads
+cryptography>=41.0.0  # Encryption for secrets
+postgrest>=0.13.0  # Supabase PostgREST client
+jsonschema>=4.20.0  # JSON schema validation
+python-jsonschema-objects>=0.9.0  # JSON schema objects
+esbuild>=0.19.0  # Bundle compilation (via subprocess)
+postgrest>=0.13.0  # Supabase PostgREST client
+supabase>=2.0.0  # Supabase Python client
+PyMySQL>=1.1.0  # MySQL database connector
+SQLAlchemy>=2.0.0  # SQL toolkit for database introspection
 
