--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@sentry/react": "^8.0.0",
-    "date-fns": "^3.6.0",
+    "@monaco-editor/react": "^4.6.0",
+    "@pipedream/sdk": "^2.3.5",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -21,9 +21,12 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@reduxjs/toolkit": "^2.11.0",
+    "@sentry/react": "^8.0.0",
+    "@tanstack/react-query": "^5.59.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
     "mixpanel-browser": "^2.73.0",
@@ -32,8 +35,6 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
-    "@tanstack/react-query": "^5.59.0",
-    "@monaco-editor/react": "^4.6.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -56,4 +57,3 @@
     "vite": "^7.2.4"
   }
 }
-
