--- a/requirements.txt
+++ b/requirements.txt
@@ -25,8 +25,8 @@ requests>=2.32.*  # Already present, used for image downloads
 cryptography>=41.0.0  # Encryption for secrets
 postgrest>=0.13.0  # Supabase PostgREST client
 jsonschema>=4.20.0  # JSON schema validation
-python-jsonschema-objects>=0.9.0  # JSON schema objects
-esbuild>=0.19.0  # Bundle compilation (via subprocess)
+python-jsonschema-objects>=0.5.0  # JSON schema objects
+# Note: esbuild is a Node.js tool, install via npm if needed
 postgrest>=0.13.0  # Supabase PostgREST client
 supabase>=2.0.0  # Supabase Python client
 PyMySQL>=1.1.0  # MySQL database connector
