--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.19.8",
+    "@mergeapi/react-agent-handler-link": "^0.0.5",
     "@monaco-editor/react": "^4.6.0",
     "@pipedream/sdk": "^2.3.5",
     "@radix-ui/react-accordion": "^1.2.12",
