--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ psycopg2-binary==2.9.*
 gunicorn==21.2.*
 django-cors-headers>=4.0.0
 openai==1.12.*
-Pillow==10.2.*
+Pillow>=10.3.0
 httpx>=0.27.0  # HTTP client for OpenRouter streaming
 whitenoise==6.6.0
 fal-client>=0.10.0
