--- a/requirements.txt
+++ b/requirements.txt
@@ -32,4 +32,4 @@ ipython>=8.12.0  # Interactive Python shell with syntax highlighting and line nu
 supabase>=2.0.0  # Supabase Python client
 PyMySQL>=1.1.0  # MySQL database connector
 SQLAlchemy>=2.0.0  # SQL toolkit for database introspection
-
+pydantic>=2.0.0  # Data validation with strict typing
