--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.19.8",
@@ -39,6 +40,9 @@
     "react-router-dom": "^7.10.1",
     "tailwind-merge": "^3.4.0"
   },
+  "lint-staged": {
+    "*.{ts,tsx}": ["eslint --fix"]
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/mixpanel-browser": "^2.60.0",
@@ -52,6 +56,8 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "~5.9.3",
